[gd_scene load_steps=18 format=2]

[ext_resource path="res://resimler/AnaArkaplan.webp" type="Texture" id=1]
[ext_resource path="res://fontlar/youngserif-regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resimler/giris_buton_normal.webp" type="Texture" id=3]
[ext_resource path="res://resimler/mum.webp" type="Texture" id=4]
[ext_resource path="res://resimler/mum_tikli.webp" type="Texture" id=5]
[ext_resource path="res://ScrollContainer.gd" type="Script" id=6]
[ext_resource path="res://resimler/giris_buton_disabled.webp" type="Texture" id=7]
[ext_resource path="res://efektler/dikey_ates.webp" type="Texture" id=8]
[ext_resource path="res://sceneler/Causerie.gd" type="Script" id=9]
[ext_resource path="res://resimler/giris_buton_basili.webp" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
outline_color = Color( 0.0745098, 0.0823529, 1, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 20
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 22
outline_size = 1
outline_color = Color( 0.0745098, 0.0823529, 1, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="CanvasItemMaterial" id=10]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=11]
lifetime_randomness = 0.16
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, -15, 0 )
angular_velocity_random = 0.41
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 4.61
radial_accel = 9.19
radial_accel_random = 0.24
tangential_accel = 2.3
damping_random = 0.24
hue_variation_random = 0.48

[sub_resource type="DynamicFont" id=13]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 20
outline_color = Color( 0.101961, 0.690196, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="Causerie" type="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -359.0
margin_top = -519.0
margin_right = 359.0
margin_bottom = 519.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
script = ExtResource( 9 )

[node name="Ana_Konteyner" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 29.0
margin_right = -21.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UstBar" type="HBoxContainer" parent="Ana_Konteyner"]
margin_right = 672.0
margin_bottom = 61.0
custom_constants/separation = 33
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Universe" type="TextureButton" parent="Ana_Konteyner/UstBar"]
margin_right = 200.0
margin_bottom = 61.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 10 )

[node name="UniverseText" type="Label" parent="Ana_Konteyner/UstBar/Universe"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Universe"
align = 1
valign = 1

[node name="Panteon" type="TextureButton" parent="Ana_Konteyner/UstBar"]
margin_left = 233.0
margin_right = 433.0
margin_bottom = 61.0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 7 )

[node name="PanteonText" type="Label" parent="Ana_Konteyner/UstBar/Panteon"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Panteon"
align = 1
valign = 1

[node name="Sovereign" type="TextureButton" parent="Ana_Konteyner/UstBar"]
margin_left = 466.0
margin_right = 666.0
margin_bottom = 61.0
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 7 )

[node name="SovereignText" type="Label" parent="Ana_Konteyner/UstBar/Sovereign"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Sovereign"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Ana_Konteyner"]
margin_top = 65.0
margin_right = 672.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 15 )

[node name="GonderKutusu" type="HBoxContainer" parent="Ana_Konteyner"]
margin_top = 84.0
margin_right = 672.0
margin_bottom = 214.0
focus_mode = 2

[node name="TextEdit" type="TextEdit" parent="Ana_Konteyner/GonderKutusu"]
margin_right = 588.0
margin_bottom = 130.0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_colors/font_color = Color( 0.745098, 0.827451, 0.0352941, 1 )
custom_colors/background_color = Color( 0.415686, 0.321569, 0.141176, 1 )
custom_fonts/font = SubResource( 9 )
text = "Type your text here!"
syntax_highlighting = true
fold_gutter = true
smooth_scrolling = true
wrap_enabled = true
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Ana_Konteyner/GonderKutusu/TextEdit"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -36.0
custom_fonts/font = SubResource( 14 )
text = "/250"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Mum1" type="TextureButton" parent="Ana_Konteyner/GonderKutusu"]
margin_left = 592.0
margin_right = 672.0
margin_bottom = 130.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Particles2D" type="Particles2D" parent="Ana_Konteyner/GonderKutusu/Mum1"]
show_behind_parent = true
material = SubResource( 10 )
position = Vector2( 35.9306, -3.38382 )
amount = 10
lifetime = 1.2
speed_scale = 2.0
process_material = SubResource( 11 )
texture = ExtResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Ana_Konteyner/GonderKutusu/Mum1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.26
margin_top = 97.5417
margin_right = -9.73999
margin_bottom = 3.54166
rect_rotation = -90.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_colors/font_color = Color( 0.745098, 0.827451, 0.0352941, 1 )
custom_fonts/font = SubResource( 13 )
text = "OK"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="MesajlarKutusu" type="ColorRect" parent="Ana_Konteyner"]
margin_top = 218.0
margin_right = 672.0
margin_bottom = 979.0
size_flags_vertical = 3
color = Color( 1, 1, 1, 0.588235 )

[node name="ScrollContainer" type="ScrollContainer" parent="Ana_Konteyner/MesajlarKutusu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 6 )

[node name="Mesajlar" type="Label" parent="Ana_Konteyner/MesajlarKutusu/ScrollContainer"]
margin_right = 632.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="Ana_Konteyner/UstBar/Panteon" to="." method="_on_Panteon_pressed"]
[connection signal="focus_exited" from="Ana_Konteyner/GonderKutusu/TextEdit" to="." method="_on_TextEdit_focus_exited"]
[connection signal="gui_input" from="Ana_Konteyner/GonderKutusu/TextEdit" to="." method="_on_TextEdit_gui_input"]
[connection signal="text_changed" from="Ana_Konteyner/GonderKutusu/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="Ana_Konteyner/GonderKutusu/Mum1" to="." method="_on_Mum1_pressed"]
